# fine-grained-ai-text-detection

./: LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
aidetect/: __init__.py  cli.py  detector.py  features.py  server.py
src/: api.ts  classifier.ts  cli.ts  ensemble.ts  features.ts  index.ts  types.ts
tests/: classifier.test.ts  test_aidetect.py
